# eddrit

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  app.json  biome.json  docker-compose.yaml  mise.toml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/actions/merge-and-push/: action.yml
.github/workflows/: build.yml  ci.yml  docker_hub.yml
doc/: dev.md
doc/deployment/: README.md  docker-compose.yml
eddrit/: __init__.py  app.py  config.py  const.py  constants.py  exceptions.py  templates.py
eddrit/models/: __init__.py  flair.py  link.py  pagination.py  post.py  settings.py  subreddit.py  user.py  wiki.py
eddrit/reddit/: fetch.py  parser.py
eddrit/reddit/content_parser/: flair.py  media.py  utils.py  video_parsers.py
eddrit/routes/: exception_handlers.py  index.py  instance.py  meta.py  over18.py  settings.py  subreddit.py
eddrit/routes/api/: __init__.py  comments.py
eddrit/routes/common/: context.py  cookies.py  exception_handlers.py  request.py
eddrit/routes/pages/: index.py  meta.py  over18.py  root_files.py  search.py  settings.py  subreddit.py  subreddit_and_user.py  subreddit_user_and_wiki.py
eddrit/routes/xhr/: __init__.py  comments.py
eddrit/utils/: api.py  cookies.py  http.py  httpx.py  jinja.py  math.py  media.py  middlewares.py  oauth.py  request.py  settings.py  subreddit.py  urls.py
static/: browserconfig.xml  manifest.json
static/css/: main.css  nojs.css  pico-bootstrap-grid.min.css  pico.min.css
static/favicon/: site.webmanifest
static/js/: eddrit.js  favorites.js  main.js  sidebar.js  theme.js
static/vendors/dashjs/: LICENCE.md  dash.all.min.js
static/vendors/videojs/: video-js-min.css  video.min.js  videojs-dash.min.js
templates/: about.html  base.html  comments_xhr.html  error.html  footer.html  header.html  over18.html  post.html  posts_list.html  search.html  settings.html  wiki_page.html
templates/macros/: comments.html  common.html  post.html  search_results.html
tests/: conftest.py
tests/routes/: test_instance.py
tests/routes/pages/: test_instance.py
tests/utils/: test_cookies.py  test_math.py  test_media.py  test_middleware.py  test_request.py  test_settings.py
