[tool.poetry]
name = "eddrit"
version = "0.6.5"
description = "Alternative Reddit frontend"
authors = ["corenting <corenting@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^23.1.0"
environs = "^10.3.0"
gunicorn = "^21.0.0"
httpx = {version = "^0.26.0", extras = ["http2"]}
Jinja2 = "^3.1.3"
loguru = "^0.7.0"
lxml = "^5.1.0"
python-multipart = "^0.0.6"
starlette = "^0.36.1"
timeago = "^1.0.16"
tldextract = "^5.0.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}

[tool.poetry.dev-dependencies]
coverage = {version = "*", extras = ["toml"]}
mypy = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.ruff]
target-version = "py312"
# Enable pycodestyle (E), Pyflakes (F), flake8-print (T20), ruff rules (RUF),
# flake8-comprehensions (C4), flake8-datetimez (DTZ), isort (I), pep8-naming (N)
# pyupgrade (UP), flake8-async (ASYNC), flake8-bandit (S), perflint (PERF),
# tryceratops (SIM)
select = ["E", "F", "T20", "RUF", "C4", "DTZ", "I", "N", "UP", "ASYNC", "S", "PERF", "SIM"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"app.py" = ["S104"] # binding on all interfaces for dev

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.coverage.run]
omit = ["eddrit/config.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
